<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_body_gradient"
    tools:context=".ui.view.fragment.SignUpFragment">

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/header_sign_up_height"
        android:background="@drawable/bg_header_solid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:src="@drawable/ic_user_photo"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin_top"
        android:text="@string/sign_up_button_text"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginStart="@dimen/field_sides_margin"
        android:layout_marginTop="@dimen/field_margin_top"
        android:layout_marginEnd="@dimen/field_sides_margin"
        android:background="@drawable/bg_input_solid"
        android:drawableStart="@drawable/ic_user_name"
        android:drawablePadding="@dimen/field_drawable_padding"
        android:hint="@string/name_label_text"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="@dimen/field_padding_start"
        android:textColor="@color/title_color"
        android:textColorHint="@color/hint_text_color"
        android:textSize="@dimen/field_text_size"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginStart="@dimen/field_sides_margin"
        android:layout_marginTop="@dimen/field_margin_top"
        android:layout_marginEnd="@dimen/field_sides_margin"
        android:background="@drawable/bg_input_solid"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/field_drawable_padding"
        android:hint="@string/email_label_text"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="@dimen/field_padding_start"
        android:textColor="@color/title_color"
        android:textColorHint="@color/hint_text_color"
        android:textSize="@dimen/field_text_size"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginStart="@dimen/field_sides_margin"
        android:layout_marginTop="@dimen/field_margin_top"
        android:layout_marginEnd="@dimen/field_sides_margin"
        android:background="@drawable/bg_input_solid"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/field_drawable_padding"
        android:hint="@string/password_label_text"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="@dimen/field_padding_start"
        android:textColor="@color/title_color"
        android:textColorHint="@color/hint_text_color"
        android:textSize="@dimen/field_text_size"
        app:layout_constraintBottom_toTopOf="@+id/password_conformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_conformation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginStart="@dimen/field_sides_margin"
        android:layout_marginTop="@dimen/field_margin_top"
        android:layout_marginEnd="@dimen/field_sides_margin"
        android:background="@drawable/bg_input_solid"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/field_drawable_padding"
        android:hint="@string/confirm_password_label_text"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="@dimen/field_padding_start"
        android:textColor="@color/title_color"
        android:textColorHint="@color/hint_text_color"
        android:textSize="@dimen/field_text_size"
        app:layout_constraintBottom_toTopOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/button_sides_margin"
        android:layout_marginTop="@dimen/field_margin_top"
        android:layout_marginEnd="@dimen/button_sides_margin"
        android:background="@drawable/bg_sign_up_button_solid"
        android:text="@string/sign_up_button_text"
        android:textColor="@color/color_of_text_from_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_conformation" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hint_of_authorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_text_margin_bottom"
        android:text="@string/hint_of_authorization_text"
        android:textColor="@color/hint_text_color"
        android:textSize="@dimen/field_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_in"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_in_margin_start"
        android:layout_marginBottom="@dimen/bottom_text_margin_bottom"
        android:text="@string/sign_in_text"
        android:textColor="@color/bg_button_color"
        android:textSize="@dimen/field_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hint_of_authorization" />


</androidx.constraintlayout.widget.ConstraintLayout>